# Krya.ai

./: .gitignore  ANALYSIS_REPORT.md  API_KEY_SECURITY_ALERT.md  BUILD_INSTRUCTIONS.md  CONTRIBUTING.md  ISSUES_SUMMARY.md  KNOWN_ISSUES.md  README.md  SECURITY.md  SETUP.md  TROUBLESHOOTING.md  build.sh  create_icons.sh
src/: requirements.txt
src/config/: config.json.example
src/functions/: config.py  exec.py  gen.py
src/generated_output/: generated_output.py
src/system/: instruction.txt
ui/: index.html  package-lock.json  package.json  settings.html  vite.config.ts
ui/src/: App.css  App.tsx  config.ts  index.css  main.tsx  store.ts
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/resources/src/: app.py  utils.py
ui/src-tauri/resources/src/functions/: gen.py
ui/src-tauri/resources/src/generated_output/: generated_output.py
ui/src-tauri/src/: main.rs
ui/src/components/: ConsolePanel.css  ConsolePanel.tsx  ErrorBanner.tsx  Settings.css  Settings.tsx
