[package]
name = "krya-ai"
version = "0.1.0"
description = "Krya.ai - Automated interactions and code execution on local machine"
authors = ["Devdatta Talele"]
license = "MIT"
repository = ""
default-run = "krya-ai"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.0", features = [ "window-minimize", "dialog-message", "shell-execute", "window-center", "window-hide", "window-set-always-on-top", "window-set-decorations", "window-set-skip-taskbar", "window-create", "window-start-dragging", "dialog-confirm", "window-show", "notification-all", "process-exit", "process-relaunch", "shell-sidecar", "clipboard-all", "dialog-ask", "window-maximize", "window-set-title", "window-set-size", "window-set-position", "window-request-user-attention", "window-close", "http-all", "macos-private-api", "window-set-focus", "system-tray", "global-shortcut-all", "shell-open"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
window-vibrancy = "0.6.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ] 
